--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="image">
-        <img src="src/img/find_fountain.png" alt="">
+        <img src="src/img/find_fountain.png">
     </div>
 </body>
 </html>
