--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="image">
-        <img src="src/img/find_fountain.png">
+        <a href="#">
+            <img src="src/img/find_fountain.png" href="#">
+        </a>
     </div>
 </body>
 </html>
