--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="image">
-        <a href="#">
-            <img src="src/img/find_fountain.png" href="#">
+        <a href="src/decouvrir.html">
+            <img src="src/img/find_fountain.png">
         </a>
     </div>
 </body>
