--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="image">
-        <a href="src/decouvrir.html">
+        <a href="#">
             <img src="src/img/find_fountain.png">
         </a>
     </div>
