--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <div class="image">
-        <a href="#">
+        <a href="../index.html">
             <img src="src/img/find_fountain.png">
         </a>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
