--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Find Fountain</title>
 </head>
 <body>
-    <div class="image">
-        <a href="src/index.html">
-            <img src="src/img/find_fountain.png">
-        </a>
+    <div id="barba-wrapper">
+        <div class="barba-container">
+            <div class="image">
+                <a href="src/index.html">
+                    <img src="src/img/find_fountain.png">
+                </a>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
