--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="src/css/style.css">
     <title>Find Fountain</title>
 </head>
-<body>
-    <div class="image">
-        <a href="../index.html">
-            <img src="src/img/find_fountain.png">
-        </a>
-    </div>
+<body> 
+    {# <div id="barba-wrapper"> #}
+        {# <div class="barba-container"> #}
+            <div class="image">
+                <a href="../index.html">
+                    <img src="src/img/find_fountain.png">
+                </a>
+            </div>
+        {# </div> #}
+    {# </div> #}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
-    <script src="js/app.js"></script>
+    {# // <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script> #}
+    {# // <script src="js/app.js"></script> #}
 </body>
 </html>
