--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Find Fountain</title>
 </head>
 <body>
-    <div id="barba-wrapper">
-        <div class="barba-container">
+    {# <div id="barba-wrapper">
+        <div class="barba-container"> #}
             <div class="image">
                 <a href="src/index.html">
                     <img src="src/img/find_fountain.png">
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
-    <script src="src/js/app.js"></script>
+    {# // <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js"></script>
+    // <script src="src/js/app.js"></script> #}
 </body>
 </html>
