--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
                     <img src="src/img/find_fountain.png">
                 </a>
             </div>
+        {# </div>
+    </div> #}
+
+    <div id="container">
+        <div id="glass">
+            <div id="water">
+            </div>
         </div>
     </div>
 
