--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/map.css">
     <title>Find Fountain</title>
 </head>
 <body>
-    <div class="image">
-        <a href="src/index.html">
-        </a>
+    <div class="map-bg">
+        <img id="map" src="img/plan-rouen.jpg" width="350px" height="635px">
     </div>
-    
+
     <script src="src/js/app.js"></script> 
 </body>
 </html>
