bordure qui pause problème

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="map-bg">
-        <img id="map" src="img/plan-rouen.jpg" width="350px" height="635px">
+        <img src="img/map.png" width="350px" height="625px">
     </div>
 
     <script src="src/js/app.js"></script> 
