--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="src/css/map.css">
+    <link rel="stylesheet" href="css/map.css">
     <title>Find Fountain</title>
 </head>
 <body>
     <div class="map-bg">
-        <img src="img/map.png" width="350px" height="625px">
+        <img id="map" src="img/map.png">
     </div>
+
+    <footer>
+        <div class="left">
+            <img src="img/compass.png">
+        </div>
+        <div class="mid">
+
+        </div>
+        <div class="right">
+
+        </div>
+    </footer>
 
     <script src="src/js/app.js"></script> 
 </body>
