--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,20 @@
 <body>
     <div class="map-bg">
         <img id="map" src="img/map.png">
+
+        <footer>
+            <div class="left">
+                <img src="img/compass.png">
+            </div>
+            <div class="mid">
+                <img src="img/pin.png">
+            </div>
+            <div class="right">
+                <img src="img/boxGray.png">
+            </div>
+        </footer>
+        
     </div>
-
-    <footer>
-        <div class="left">
-            <img src="img/compass.png">
-        </div>
-        <div class="mid">
-
-        </div>
-        <div class="right">
-
-        </div>
-    </footer>
 
     <script src="src/js/app.js"></script> 
 </body>
