--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/map.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Find Fountain</title>
 </head>
 <body>
@@ -21,6 +22,10 @@
             <div class="right">
                 <img src="img/boxGray.png">
             </div>
+
+            <p id="discover">Découvrir</p>
+            <p id="pointer">Pointer</p>
+            <p id="contribution">Contribuer</p>
         </footer>
         
     </div>
