create indexP + rename indexD (pour me repérer)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="image">
-        <a href="src/index.html">
+        <a href="src/indexD.html">
             <img src="src/img/find_fountain.png">
         </a>
     </div>
