--- a/src/indexP.html
+++ b/src/indexP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/discover.css">
+    <link rel="stylesheet" href="css/.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Find Fountain</title>
 </head>
@@ -29,7 +29,5 @@
         </footer>
         
     </div>
-
-    <script src="src/js/app.js"></script> 
 </body>
 </html>
