lien entre les deux pages

--- a/src/indexD.html
+++ b/src/indexD.html
@@ -24,7 +24,11 @@
             </div>
 
             <p id="discover">Découvrir</p>
-            <p id="pointer">Pointer</p>
+
+            <a href="indexP.html">
+                <p id="pointer">Pointer</p>
+            </a>
+
             <p id="contribution">Contribuer</p>
         </footer>
         
