--- a/src/indexP.html
+++ b/src/indexP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/.css">
+    <link rel="stylesheet" href="css/pointer.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Find Fountain</title>
 </head>
@@ -23,7 +23,10 @@
                 <img src="img/boxGray.png">
             </div>
 
-            <p id="discover">Découvrir</p>
+            <a href="indexD.html">
+                <p id="discover">Découvrir</p>
+            </a>
+
             <p id="pointer">Pointer</p>
             <p id="contribution">Contribuer</p>
         </footer>
