changement couleur et logo pour le indexP.html

--- a/src/indexP.html
+++ b/src/indexP.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="map-bg">
-        <img id="map" src="img/map.png">
+        <img id="map" src="img/mapP.png">
 
         <footer>
             <div class="left">
-                <img src="img/compass.png">
+                <img src="img/compassGray.png">
             </div>
             <div class="mid">
-                <img src="img/pin.png">
+                <img src="img/pinBlue.png">
             </div>
             <div class="right">
                 <img src="img/boxGray.png">
