ajout du code final dans indexC.html + fin du front

--- a/src/indexC.html
+++ b/src/indexC.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/pointer.css">
+    <link rel="stylesheet" href="css/contribuer.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Find Fountain</title>
 </head>
 <body>
-    
+    <a href="indexD.html"><h2>Contribuer</h2></a>
+
+    <header>
+        <div class="avatar">
+            <img src="img/avatar wankil.png">
+
+            <div class="text">
+                <p id="name">Alexandre Mérault</p>
+                <p id="profil"> Votre profil</p>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <p>Différentes associations<br>contre la pollution</p>
+    </div>
+
+    <div class="grid-container">
+        <div class="first">
+            <a href="https://www.respire-asso.org/" target="blank"><img src="img/respîre.png"></a>
+            <img src="img/boxBlueSmall.png">
+            <p>RESPIRE, Association Nationale pour la Préservation et l’Amélioration de la Qualité de l’Air, est une association de loi 1901, déclarée officiellement à la Préfecture de Paris et publiée au Journal Officiel le 22 février 2011.</p>
+        </div>
+        <div class="second">
+            <img src="img/boxBlueSmall.png">
+            <a href="https://oceanoplastic.org/" target="blank"><img src="img/oceanplastique.png"></a>
+            <p>L’association OCEANOPLASTIC
+                ONG à vocation environnementale visant à lutter contre la pollution plastique des océans.
+               100 % des déchets plastiques marins ont tout simplement échappé à notre contrôle…</p>
+        </div>
+        <div class="third">
+            <a href="https://www.appa.asso.fr/" target="blank"><img src="img/appa.png"></a>
+            <img src="img/boxBlueSmall.png">
+            <p>L’Association pour la Prévention de la Pollution Atmosphérique a été créée en 1958 et reconnue d’utilité publique en 1962.
+                L’APPA se mobilise sur toutes les questions relatives à la qualité de l’air, à l’extérieur comme à l’intérieur des locaux, du niveau global au niveau local : changement climatique.</p>
+        </div>
+        <div class="four">
+            <img src="img/boxBlueSmall.png">
+            <a href="http://ecologiesansfrontiere.fr/" target="blank"><img src="img/ecologie.png"></a>
+            <p>La préservation de l’écologie dans le monde doit être une priorité de notre siècle.
+                Pollution, déforestation et autres sont autant de facteurs qui détruisent notre planète à petit feu et sont responsables de millions de morts chaque année. Maladies respiratoires, destruction de la faune et de la flore, les conséquences sont multiples.</p>
+        </div>
+    </div>
 </body>
 </html>
