--- a/src/indexD.html
+++ b/src/indexD.html
@@ -29,7 +29,9 @@
                 <p id="pointer">Pointer</p>
             </a>
 
-            <p id="contribution">Contribuer</p>
+            <a href="indexC.html">
+                <p id="contribution">Contribuer</p>
+            </a>
         </footer>
         
     </div>
