--- a/src/indexP.html
+++ b/src/indexP.html
@@ -28,7 +28,10 @@
             </a>
 
             <p id="pointer">Pointer</p>
-            <p id="contribution">Contribuer</p>
+
+            <a href="indexC.html">
+                <p id="contribution">Contribuer</p>
+            </a>
         </footer>
         
     </div>
