--- a/src/indexC.html
+++ b/src/indexC.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="avatar">
-            <img src="img/avatar wankil.png">
+            <a href="profil.html"><img src="img/avatar wankil.png"></a>
 
             <div class="text">
                 <p id="name">Alexandre Mérault</p>
