--- a/src/profil.html
+++ b/src/profil.html
@@ -9,19 +9,23 @@
     <title>Find Fountain</title>
 </head>
 <body>
-    <form action="connexion" method="post">
-        <div>
-            <label for="name">Nom :</label>
-            <input type="text" id="name" name="user_name">
-        </div>
-        <div>
-            <label for="mail">e-mail :</label>
-            <input type="email" id="mail" name="user_mail">
-        </div>
-        <div>
-            <label for="mdp">Mot de passe :</label>
-            <input id="mdp" type="password" name="user_motDePasse">
-        </div>
-    </form>
+    <div class="container">
+        <form action="connexion" method="post">
+            <div class="name">
+                <label for="name">Nom :</label>
+                <input type="text" id="name" name="user_name">
+            </div>
+            <div class="email">
+                <label for="mail">E-mail :</label>
+                <input type="email" id="mail" name="user_mail">
+            </div>
+            <div class="mdp">
+                <label for="mdp">Password :</label>
+                <input id="mdp" type="password" name="user_motDePasse">
+            </div>
+        </form>
+
+        <input type="button" value="Valider">
+    </div>
 </body>
 </html>
