--- a/src/profil.html
+++ b/src/profil.html
@@ -24,7 +24,7 @@
             </div>
             <div class="mdp">
                 <label for="mdp">Password :</label>
-                <input id="mdp" type="password" name="user_motDePasse">
+                <input id="mdp" type="password" name="user_password">
             </div>
 
             <input type="button" type="submit" name="envoie" value="Valider">
